fix: remove scrollbar-gutter to fix header width

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-html {
-  scrollbar-gutter: stable;
-}
+
 
 body {
   margin: 0;
